feat: Implement Auth and User Management Features
This commit introduces several key features for user authentication and
management:

- **User Actions:** A new `createUserAction` is added to handle user
  creation through server actions, leveraging Zod schemas for
  validation.
- **Webhook Handler:** A `POST` route is implemented at
  `/api/webhooks/route.ts` to process incoming webhooks, specifically
  for `user.created` events from Clerk. This handler verifies the
  webhook and creates a new user in the database.
- **Authentication Pages:** New pages for `forgot-password`, `sign-in`,
  and `sign-up` are created. These pages integrate with Clerk for
  authentication flows and utilize custom UI components for forms and
  user feedback.
- **Auth Components:** `SignInForm` and `SignupForm` components are
  introduced, providing reusable UI elements for authentication forms.
  These components handle form state, validation, and API interactions.
- **Data Layer:** A `UserService` is established in
  `dal/user.service.ts` to abstract database operations for user
  management. It includes a `ServiceError` class for custom error
  handling.
- **Database Integration:** Prisma schema for the `user` model is
  defined, including roles and status enums. The `lib/db.ts` file is set
  up to manage the Prisma client instance.
- **Utility Functions:** `createSafeAction` is added to simplify the
  creation of server actions with built-in validation and authentication
  checks. `auth-utils.ts` provides a helper to retrieve authenticated
  session data.
- **Schema Definitions:** Comprehensive Zod schemas for user-related
  data (`user.schema.ts`) are defined, covering database models, API
  inputs, and specific workflow validations.
- **Type Definitions:** New types for `ActionResponse` and `ErrorCodes`
  are added in `types/action-types.ts` to standardize response formats
  for actions and API endpoints.

--- a/package.json
+++ b/package.json
@@ -33,6 +33,7 @@
     "zod": "^4.3.6"
   },
   "devDependencies": {
+    "@clerk/types": "^4.101.14",
     "@tailwindcss/postcss": "^4",
     "@types/node": "^20",
     "@types/pg": "^8.16.0",
