--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
     "clsx": "^2.1.1",
     "dotenv": "^17.2.3",
     "input-otp": "^1.4.2",
+    "lucide-react": "^0.563.0",
     "next": "16.1.4",
     "next-themes": "^0.4.6",
     "pg": "^8.17.2",
