--- a/package.json
+++ b/package.json
@@ -16,12 +16,15 @@
     "@hugeicons/react": "^1.1.4",
     "@prisma/adapter-pg": "^7.3.0",
     "@prisma/client": "^7.3.0",
+    "@react-three/drei": "^10.7.7",
+    "@react-three/fiber": "10.0.0-alpha.2",
     "@tanstack/react-form": "^1.28.0",
     "class-variance-authority": "^0.7.1",
     "clsx": "^2.1.1",
     "dotenv": "^17.2.3",
     "input-otp": "^1.4.2",
     "lucide-react": "^0.563.0",
+    "motion": "^12.34.0",
     "next": "16.1.4",
     "next-themes": "^0.4.6",
     "pg": "^8.17.2",
@@ -31,6 +34,8 @@
     "shadcn": "^3.8.2",
     "sonner": "^2.0.7",
     "tailwind-merge": "^3.4.0",
+    "three": "^0.182.0",
+    "three-globe": "^2.45.0",
     "tw-animate-css": "^1.4.0",
     "zod": "^4.3.6"
   },
@@ -41,10 +46,12 @@
     "@types/pg": "^8.16.0",
     "@types/react": "^19",
     "@types/react-dom": "^19",
+    "@types/three": "^0.182.0",
     "eslint": "^9",
     "eslint-config-next": "16.1.4",
     "prisma": "^7.3.0",
     "tailwindcss": "^4",
+    "tsx": "^4.21.0",
     "typescript": "^5"
   },
   "packageManager": "pnpm@10.14.0+sha512.ad27a79641b49c3e481a16a805baa71817a04bbe06a38d17e60e2eaee83f6a146c6a688125f5792e48dd5ba30e7da52a5cda4c3992b9ccf333f9ce223af84748"
